statum-macros/tests/ui/invalid_state_tuple_variant.rs
#![allow(unused_imports)]
use statum_macros::state;

#[state]
enum BadState {
    Draft(u32, u32),
}